--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+
 Django==4.2
 djangorestframework
 django-cors-headers
 django-admin-interface
 django-colorfield
-waitress
+waitress 
 tzdata
 mysqlclient
 gunicorn
+whitenoise 
+python-dotenv 
